MDEV-26067 innodb_lock_wait_timeout values above 100,000,000 are useless

The practical maximum value of the parameter innodb_lock_wait_timeout
is 100,000,000. Any value larger than that specifies an infinite timeout.

Therefore, we should make 100,000,000 the maximum value of the parameter.