storage/innobase/include/ha_prototypes.h
@@ -242,7 +242,7 @@ const char *thd_innodb_tmpdir(THD *thd);
 /******************************************************************//**
 Returns the lock wait timeout for the current connection.
 @return the lock wait timeout, in seconds */
-ulong
+uint
 thd_lock_wait_timeout(
 /*==================*/
 	THD*	thd);	/*!< in: thread handle, or NULL to query
